// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replayer > can fast forward past StyleSheetRule changes on virtual elements 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<!DOCTYPE html><html lang=\\"en\\"><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script><style data-jss=\\"\\" data-meta=\\"Col, Themed, Dynamic\\">
.css-added-at-400 {
  padding: 1.3125rem;
  flex: none;
  width: 100%;
}
</style><style data-meta=\\"from full-snapshot, gets rule added at 500\\">.css-added-at-200-overwritten-at-3000 { opacity: 1; transform: translateX(0px); }

.css-added-at-500-overwritten-at-3000 { border: 1px solid blue; }</style><style data-emotion=\\"css\\">.css-added-at-200 { position: fixed; top: 0px; right: 0px; left: 4rem; z-index: 15; flex-shrink: 0; height: 0.25rem; overflow: hidden; background-color: rgb(17, 171, 209); }

.css-added-at-200.alt { height: 0.25rem; background-color: rgb(190, 232, 242); opacity: 0; transition: opacity 0.5s; }

.css-added-at-1000-deleted-at-2500 { display: flex; flex-direction: column; min-width: 60rem; min-height: 100vh; color: blue; }

.css-added-at-200.alt2 { padding-left: 4rem; }</style></head><body><a class=\\"css-added-at-1000-deleted-at-2500\\">string</a></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;

exports[`replayer > can fast forward past StyleSheetRule deletion on virtual elements 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<!DOCTYPE html><html lang=\\"en\\" class=\\"rrweb-paused\\"><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script><style data-jss=\\"\\" data-meta=\\"Col, Themed, Dynamic\\">
.css-added-at-400 {
  padding: 1.3125rem;
  flex: none;
  width: 100%;
}
</style><style data-meta=\\"from full-snapshot, gets rule added at 500\\">.css-added-at-200-overwritten-at-3000 { opacity: 1; transform: translateX(0px); }

.css-added-at-500-overwritten-at-3000 { border: 1px solid blue; }</style><style data-emotion=\\"css\\">.css-added-at-200 { position: fixed; top: 0px; right: 0px; left: 4rem; z-index: 15; flex-shrink: 0; height: 0.25rem; overflow: hidden; background-color: rgb(17, 171, 209); }

.css-added-at-200.alt { height: 0.25rem; background-color: rgb(190, 232, 242); opacity: 0; transition: opacity 0.5s; }

.css-added-at-200.alt2 { padding-left: 4rem; }</style></head><body><a class=\\"css-added-at-1000-deleted-at-2500\\">string</a></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;

exports[`replayer > can handle remote stylesheets 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<html><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script><style>.OverlayDrawer-modal-187 { }.OverlayDrawer-paper-188 { width: 100%; }@media (min-width: 48em) {
  .OverlayDrawer-paper-188 { width: 38rem; }
}@media (min-width: 48em) {
}@media (min-width: 48em) {
}</style></head><body></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;

exports[`replayer > can handle removing style elements 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<html><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script></head><body></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;

exports[`replayer > replays same timestamp events in correct order (with addAction) 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<!DOCTYPE html><html lang=\\"en\\"><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script></head><body><span>Final - correct</span></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;

exports[`replayer > replays same timestamp events in correct order 1`] = `
"file-frame-0
<html><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-1\\"></script></head><body><div class=\\"replayer-wrapper\\"><iframe sandbox=\\"allow-same-origin\\" scrolling=\\"no\\" width=\\"1000\\" height=\\"800\\" style=\\"display: inherit; pointer-events: none;\\"></iframe></div></body></html>

file-cid-1
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();

file-frame-0
<!DOCTYPE html><html lang=\\"en\\"><style>.rr-block { background: currentcolor; }

noscript { display: none !important; }

html.rrweb-paused *, html.rrweb-paused ::before, html.rrweb-paused ::after { animation-play-state: paused !important; }</style><head><meta http-equiv=\\"Content-Type\\" content=\\"text/html; charset=UTF-8\\"><script src=\\"file-cid-2\\"></script></head><body><span>Final - correct</span></body></html>

file-cid-2
(()=>{
function addCustomElement(def) {
  if (def.is_autonomous) {
      window.customElements.define(def.name, class extends HTMLElement{});
  } else {
    const templateElement = document.createElement(def.local_name);
    const baseName = Object.getPrototypeOf(templateElement).constructor.name;
    const ElementBase = window[baseName];
    window.customElements.define(def.name, class extends ElementBase {},
      {extends: def.local_name});
  }
}

function addCustomElements(metadata) {
  for (const def of metadata.custom_elements) {
    try {
      addCustomElement(def);
    } catch (e) {
      console.log(e);
    }
  }
}

function main(metadata) {
  addCustomElements(metadata);
}
main({\\"custom_elements\\":[]});})();"
`;
